// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render CourseSection with courses 1`] = `
<article
  className="CourseSection"
  id="SectionName"
>
  <header
    className="CourseSection__header"
  >
    <h2>
      Section Name
    </h2>
  </header>
  <section
    className="CourseSection__courses"
  >
    <Course
      key="Course 1"
      name={
        Object {
          "text": "Course 1",
        }
      }
    />
    <Course
      key="Course 2"
      name={
        Object {
          "text": "Course 2",
        }
      }
    />
  </section>
</article>
`;

exports[`Render CourseSection without courses 1`] = `
<article
  className="CourseSection"
  id="SectionName"
>
  <header
    className="CourseSection__header"
  >
    <h2>
      Section Name
    </h2>
  </header>
  <section
    className="CourseSection__courses"
  />
</article>
`;
